<resources>
    <string name="app_name">examen_android</string>

    <string name="ea_welcome">Bienvenido</string>
    <string name="ea_popular">Mas Populares</string>
    <string name="ea_top_rated">Mas votadas</string>
    <string name="ea_upcoming">Proximos Estrenos</string>
    <string name="ea_date">Fecha:</string>
    <string name="ea_rated">Calificación:</string>
    <string name="ea_error_request">ocurrió un error, intente mas tarde</string>
    <string name="ea_updatingLocation">Actualizando ubicación</string>
    <string name="ea_permision_denied">Permiso denegado</string>
    <string name="ea_location">Ubicación</string>
    <string name="ea_location_permission">Permiso de ubicación</string>
    <string name="ea_location_permission_details">Necesitamos el permiso de ubicación para almacenar la ubicación correctamente</string>
    <string name="ea_choose_pictures">Elegir Fotos</string>
    <string name="ea_upload_pictures">Subir Fotos</string>
</resources>